syntax = "proto3";
package pb;
option go_package = "internal/infra/grpc/pb";

message CreateOrderRequest {
  string id = 1;
  float price = 2;
  float tax = 3;
}

message ListOrderRequest {
  float from = 1;
  float size = 2;
}

message Order {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
}

message OrderList {
  repeated Order orders = 1; 
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (Order);
  rpc ListOrder(ListOrderRequest) returns (OrderList);
}